{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 44,
  "lineage": "7910dc7b-5c6c-adbd-c941-3afc7abea86f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c8bc4d3c937ae9b",
            "associate_with_private_ip": "10.0.1.50",
            "domain": "vpc",
            "id": "eipalloc-01c8bc4d3c937ae9b",
            "network_border_group": "us-east-1",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "public_dns": "ec2-54-173-164-114.compute-1.amazonaws.com",
            "public_ip": "54.173.164.114",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web-app-instance",
            "aws_internet_gateway.app-tf-gw",
            "aws_launch_configuration.web-app-config",
            "aws_network_interface.app-tf-int",
            "aws_security_group.tf-webapp-security",
            "aws_subnet.public_subnet_1",
            "aws_vpc.app-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app-tf-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671590219173:internet-gateway/igw-0a4a867e38dfbe5b0",
            "id": "igw-0a4a867e38dfbe5b0",
            "owner_id": "671590219173",
            "tags": {
              "Name": "tf-igw"
            },
            "tags_all": {
              "Name": "tf-igw"
            },
            "vpc_id": "vpc-01fe90c608089495e"
          },
          "dependencies": [
            "aws_vpc.app-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671590219173:loadbalancer/app/app-lb/b2f0fdcfff276312",
            "arn_suffix": "app/app-lb/b2f0fdcfff276312",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-732939758.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:671590219173:loadbalancer/app/app-lb/b2f0fdcfff276312",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b3182120cd1b9a42"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03efb420c7407d4c6"
              },
              {
                "subnet_id": "subnet-0c34a1cbc1168a068"
              }
            ],
            "subnets": [
              "subnet-03efb420c7407d4c6",
              "subnet-0c34a1cbc1168a068"
            ],
            "vpc_id": "vpc-01fe90c608089495e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.tf-webapp-security",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.app-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671590219173:targetgroup/web-app-lb/e65a641a28a11c6d",
            "arn_suffix": "targetgroup/web-app-lb/e65a641a28a11c6d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671590219173:targetgroup/web-app-lb/e65a641a28a11c6d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-app-lb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01fe90c608089495e"
          },
          "dependencies": [
            "aws_vpc.app-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-tf-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671590219173:route-table/rtb-0b7f8083061f40d55",
            "id": "rtb-0b7f8083061f40d55",
            "owner_id": "671590219173",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4a867e38dfbe5b0",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4a867e38dfbe5b0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-tf-route"
            },
            "tags_all": {
              "Name": "app-tf-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fe90c608089495e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app-tf-gw",
            "aws_vpc.app-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d1440b70d4d39da",
            "route_table_id": "rtb-0b7f8083061f40d55",
            "subnet_id": "subnet-0c34a1cbc1168a068"
          },
          "dependencies": [
            "aws_internet_gateway.app-tf-gw",
            "aws_route_table.app-tf-route",
            "aws_subnet.public_subnet_1",
            "aws_vpc.app-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a3ee9a18fe513a5",
            "route_table_id": "rtb-0b7f8083061f40d55",
            "subnet_id": "subnet-03efb420c7407d4c6"
          },
          "dependencies": [
            "aws_internet_gateway.app-tf-gw",
            "aws_route_table.app-tf-route",
            "aws_subnet.public_subnet_2",
            "aws_vpc.app-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_3_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031fb9bc050cfe849",
            "route_table_id": "rtb-0b7f8083061f40d55",
            "subnet_id": "subnet-0a034b8f65c1e0cdb"
          },
          "dependencies": [
            "aws_internet_gateway.app-tf-gw",
            "aws_route_table.app-tf-route",
            "aws_subnet.public_subnet_3",
            "aws_vpc.app-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-webapp-security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671590219173:security-group/sg-0b3182120cd1b9a42",
            "description": "Security group to launch the New Terraform web Application running on an auto scaling AWS EC2-Instance.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3182120cd1b9a42",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-webapp-security",
            "name_prefix": "",
            "owner_id": "671590219173",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-webapp-security"
            },
            "tags_all": {
              "Name": "tf-webapp-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fe90c608089495e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671590219173:subnet/subnet-0c34a1cbc1168a068",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c34a1cbc1168a068",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671590219173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01fe90c608089495e"
          },
          "dependencies": [
            "aws_vpc.app-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671590219173:subnet/subnet-03efb420c7407d4c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03efb420c7407d4c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671590219173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01fe90c608089495e"
          },
          "dependencies": [
            "aws_vpc.app-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671590219173:subnet/subnet-0a034b8f65c1e0cdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a034b8f65c1e0cdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671590219173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01fe90c608089495e"
          },
          "dependencies": [
            "aws_vpc.app-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app-tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671590219173:vpc/vpc-01fe90c608089495e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c3c1383d77569f70",
            "default_route_table_id": "rtb-0b4224e0daa58d928",
            "default_security_group_id": "sg-083403ea42eb10a12",
            "dhcp_options_id": "dopt-0eaf4d61c961bc471",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01fe90c608089495e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b4224e0daa58d928",
            "owner_id": "671590219173",
            "tags": {
              "Name": "app-tf-Vpc"
            },
            "tags_all": {
              "Name": "app-tf-Vpc"
            }
          }
        }
      ]
    }
  ]
}